# breeze

./: .editorconfig  .env.example  .envrc  .gitignore  Cargo.toml  README.md  bacon.toml  compose.yml  flake.nix  rust-toolchain.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: build.yml  build_docker.yml  publish.yml
.sqlx/: query-0e927b35a051c115a8935411da4ba75241a1fc57b0769d9ccfb997379d9e91de.json  query-1cf92f1b40ccf85f7b462b971d00daddc3356f013bc6319d84cff2905274010a.json  query-2bd67ce387a9948945b3ae4e65e3c0a86fe0a2ec08acf2483edfc94db9e49d3d.json  query-5ff3a6cbc88709c8ccc0baf5b250fb40012fe9c7c359d451947f210e619752d5.json  query-bc7869ebe07fcbf1a0ea74e7cc17ef9287e14727c4ea8d7f066ddabe31f4b683.json
migrations/: 20250217081400_create-whitelist-request-table.sql
src/: commands.rs  config.rs  database.rs  error.rs  events.rs  main.rs  util.rs  utils.rs
src/commands/servers/: mod.rs  whitelist.rs
src/models/: config.rs  database.rs
utils/dev/services/: mariadb.compose.yaml
