[package]
name = "whitelist-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { version = "0.6.1" }
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main", features = [
    "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
bollard = "0.18.1"

rcon = { version = "0.6.0", features = ["rt-tokio"] }

thiserror = { version = "2.0.11", features = [] }
anyhow = "1.0.95"

serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"

uuid = { version = "1.13.1", features = ["v4"] }
