[package]
name = "whitelist-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { version = "0.6.1" }
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main", features = [
    "macros",
] }
tokio = { version = "1.43.0", features = ["full"] }
bollard = "0.18.1"

reqwest = "0.12.12"

mc-query = "2.0.0"

thiserror = { version = "2.0.11", features = [] }
anyhow = "1.0.95"

serde = { version = "1.0.217", features = ["derive"] }
serde_default_utils = { version = "0.3.1", features = ["inline"] }
toml = "0.8.20"

sqlx = { version = "*", features = [
    "runtime-tokio",
    "macros",
    "chrono",
    "mysql",
] }
uuid = { version = "1.13.1", features = ["v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
