[package]
name = "breeze"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = { version = "0.6.1" }
dotenvy = { git = "https://github.com/allan2/dotenvy", branch = "main", features = [
    "macros",
] }
tokio = { version = "1.44.0", features = ["full"] }
bollard = "0.18.1"

reqwest = "0.12.14"

mc-query = "2.0.0"

thiserror = { version = "2.0.12", features = [] }
anyhow = "1.0.97"

serde = { version = "1.0.219", features = ["derive"] }
serde_default_utils = { version = "0.3.1", features = ["inline"] }
toml = "0.8.20"

sqlx = { version = "*", features = [
    "runtime-tokio",
    "macros",
    "chrono",
    "mysql",
] }
uuid = { version = "1.15.1", features = ["v4"] }
chrono = { version = "0.4.40", features = ["serde"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
